fix alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -501,7 +501,7 @@ background-image: linear-gradient(to right, #232334, #232334), linear-gradient(t
 
 @media only screen and (min-width: 1170px) {
   .vertical-timeline--two-columns .vertical-timeline-element-content-arrow {
-    top: 18px !important;
+    top: 50px !important;
   }
   .timeline .vertical-timeline::before{
     width:18px;
@@ -514,10 +514,11 @@ background-image: linear-gradient(to right, #232334, #232334), linear-gradient(t
     width: 38px;
     height: 38px;
     left: 50% !important;
+    top: 32px !important;
   }
   .timeline  .vertical-timeline--two-columns .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content-arrow,
   .timeline  .vertical-timeline--two-columns .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content-arrow {
-    top: 18px !important;
+    top: 50px !important;
     width: 60px !important;
   }
   .vertical-timeline--two-columns .vertical-timeline-element-content {
